--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,18 @@ body {
     @apply bg-background text-foreground;
 }
 
+
+
+@layer base {}
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
+
